--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,10 +24,12 @@
         </activity>
         <activity
             android:name=".activity.DetailActivity"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/DetailActivityTheme">
         </activity>
         <activity
             android:name=".activity.AboutActivity"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme">
         </activity>
     </application>
